# PixelMap

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  genscr.sh  version.hpp.in
.forgejo/workflows/: build.yml  release.yml
cli/: CMakeLists.txt
cli/cmake/: dependencies.cmake  installcli.cmake  spdmon.patch
cli/include/: console.hpp  events.hpp  profiler.hpp  programoptions.hpp
cli/src/: CMakeLists.txt  console.cpp  events.cpp  main.cpp  profiler.cpp  programoptions.cpp
cmake/: embedfile.cmake
gui/: CMakeLists.txt
gui/cmake/: FindImgui.cmake  FindNFD.cmake  FindSDL2.cmake  dependencies.cmake  installgui.cmake
gui/include/: gui.hpp  icon.hpp  window.hpp
gui/include/imgui/: imgui_custom.h
gui/resource/: Info.plist  pixelmapim.desktop
gui/src/: CMakeLists.txt  gui.cpp  main.cpp  window.cpp
gui/src/imgui/: CMakeLists.txt  imgui_custom.cpp
webview/: CMakeLists.txt  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
webview/cmake/: generatecommand.cmake
